<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    >
    <LinearLayout
        style="@style/info_content_pad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TableLayout style="@style/frame_bg_layout">
            <TableRow
                android:id="@+id/pick_category"
                style="@style/publish_table_row"
                >
                <TextView
                    style="@style/pulish_text_style"
                    android:text="@string/category_spaced"/>
                <View style="@style/vertical_divider_20"/>
                <TextView
                    android:id="@+id/tv_category"
                    style="@style/publish_edit"
                    android:drawableRight="@drawable/right_arro"
                    />
            </TableRow>
            <View style="@style/divider_horizontal"/>
            <TableRow
                style="@style/publish_table_row"
                >
                <TextView
                    style="@style/pulish_text_style"
                    android:text="@string/title_spaced"
                    />
                <View style="@style/vertical_divider_20"/>
                <EditText
                    android:id="@+id/edit_title"
                    style="@style/publish_edit"
                    android:hint="8-28字"/>
            </TableRow>
            <View style="@style/divider_horizontal"/>
            <TableRow
                android:id="@+id/pick_description"
                style="@style/publish_table_row"
                >
                <TextView
                    style="@style/pulish_text_style"
                    android:text="@string/description_spaced"/>
                <View style="@style/vertical_divider_20"/>
                <TextView
                    android:id="@+id/tv_description"
                    style="@style/publish_edit"
                    android:drawableRight="@drawable/right_arro"
                    android:hint="@string/word10"
                    />
            </TableRow>
        </TableLayout>
        <TableLayout style="@style/frame_bg_layout">
            <TableRow  style="@style/publish_table_row">
                <TextView
                    style="@style/pulish_text_style"
                    android:text="@string/contact"/>
                <View style="@style/vertical_divider_20"/>
                <EditText
                    android:id="@+id/edit_contact"
                    style="@style/publish_edit"
                    android:hint="至少2字"/>
            </TableRow>
            <View style="@style/divider_horizontal"/>
            <TableRow style="@style/publish_table_row">
                <TextView
                    style="@style/pulish_text_style"
                    android:text="@string/phone_number" />
                <View style="@style/vertical_divider_20"/>
                <EditText
                    android:id="@+id/edit_mobile"
                    style="@style/publish_edit"/>
            </TableRow>

        </TableLayout>
        <TableLayout style="@style/frame_bg_layout">
            <TableRow
                android:id="@+id/pick_label"
                style="@style/publish_table_row">
                <TextView
                    style="@style/pulish_text_style"
                    android:text="@string/label_spaced"/>
                <View style="@style/vertical_divider_20"/>
                <EditText
                    android:id="@+id/tv_label"
                    style="@style/publish_edit"
                    android:drawableRight="@drawable/right_arro"
                    android:hint="@string/label_hint"
                    />
            </TableRow>
        </TableLayout>

        <Button
            android:text="@string/btn_publish"
            android:layout_marginTop="15dp"
            style="@style/yellow_button"
            android:id="@+id/btn_publish" />
    </LinearLayout>
</ScrollView>