<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/common_head_layout" />

    <LinearLayout
        style="@style/info_content_pad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            style="@style/frame_bg_layout"
            android:stretchColumns="2">

            <TableRow style="@style/publish_table_row">

                <TextView
                    style="@style/pulish_text_style"
                    android:text="@string/enterprise_image" />

                <View style="@style/vertical_divider_20" />

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:scaleType="center"
                    android:src="@drawable/interprise_main_img" />

                <ImageView style="@style/right_arrow" />
            </TableRow>
        </TableLayout>

        <TableLayout
            style="@style/frame_bg_layout"
            android:stretchColumns="2">

            <TableRow style="@style/publish_table_row">

                <TextView
                    style="@style/pulish_text_style"
                    android:text="@string/enterprise_name" />

                <View style="@style/vertical_divider_20" />

                <EditText style="@style/publish_edit" />

            </TableRow>

            <View style="@style/divider_horizontal" />

            <TableRow style="@style/publish_table_row">

                <TextView
                    style="@style/pulish_text_style"
                    android:text="@string/enterprise_address" />

                <View style="@style/vertical_divider_20" />

                <EditText style="@style/publish_edit" />

            </TableRow>

            <View style="@style/divider_horizontal" />

            <TableRow style="@style/publish_table_row">

                <TextView
                    style="@style/pulish_text_style"
                    android:text="@string/enterprise_phone" />

                <View style="@style/vertical_divider_20" />

                <EditText style="@style/publish_edit" />

            </TableRow>

            <View style="@style/divider_horizontal" />

            <TableRow style="@style/publish_table_row">

                <TextView
                    style="@style/pulish_text_style"
                    android:text="@string/enterprise_site" />

                <View style="@style/vertical_divider_20" />

                <EditText style="@style/publish_edit" />

            </TableRow>

            <View style="@style/divider_horizontal" />

            <TableRow style="@style/publish_table_row">

                <TextView
                    style="@style/pulish_text_style"
                    android:text="@string/enterprise_email" />

                <View style="@style/vertical_divider_20" />

                <EditText style="@style/publish_edit" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</LinearLayout>