<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg">

    <LinearLayout
        style="@style/info_content_pad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout style="@style/frame_bg_layout">

            <TableRow style="@style/publish_table_row">

                <TextView
                    style="@style/publish_text_style"
                    android:text="@string/category_spaced" />

                <View style="@style/vertical_divider_20" />

                <TextView
                    android:id="@+id/tv_pick_category"
                    style="@style/publish_edit"
                    android:drawableRight="@drawable/right_arro" />
            </TableRow>

            <View style="@style/divider_horizontal" />

            <TableRow

                style="@style/publish_table_row">

                <TextView
                    style="@style/publish_text_style"
                    android:text="@string/area_spaced" />

                <View style="@style/vertical_divider_20" />

                <TextView
                    android:id="@+id/tv_pick_region"
                    style="@style/publish_edit"
                    android:drawableRight="@drawable/right_arro" />
            </TableRow>

            <View style="@style/divider_horizontal" />

            <TableRow style="@style/publish_table_row">

                <TextView
                    style="@style/publish_text_style"
                    android:text="@string/title_spaced" />

                <View style="@style/vertical_divider_20" />

                <EditText
                    android:id="@+id/edit_title"
                    style="@style/publish_edit"
                    android:hint="15字以内" />
            </TableRow>

        </TableLayout>

        <TableLayout style="@style/frame_bg_layout">


            <TableRow style="@style/publish_table_row">

                <TextView
                    style="@style/publish_text_style"
                    android:text="@string/price_spaced" />

                <View style="@style/vertical_divider_20" />

                <EditText
                    android:id="@+id/edit_price"
                    style="@style/publish_edit"
                    android:inputType="numberDecimal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:text="元"
                    android:textColor="@color/publish_base_color" />
            </TableRow>

            <View style="@style/divider_horizontal" />

            <TableRow style="@style/publish_table_row">

                <TextView
                    style="@style/publish_text_style"
                    android:text="@string/picture_spaced" />

                <View style="@style/vertical_divider_20" />

                <TextView
                    android:id="@+id/tv_pick_image"
                    style="@style/publish_edit"
                    android:drawableRight="@drawable/right_arro"
                    android:hint="1张" />
            </TableRow>

            <View style="@style/divider_horizontal" />

            <TableRow style="@style/publish_table_row">

                <TextView
                    style="@style/publish_text_style"
                    android:text="@string/description_spaced" />

                <View style="@style/vertical_divider_20" />

                <TextView
                    android:id="@+id/tv_pick_description"
                    style="@style/publish_edit"
                    android:drawableRight="@drawable/right_arro"
                    android:hint="@string/word10" />
            </TableRow>


        </TableLayout>

        <TableLayout style="@style/frame_bg_layout">

            <TableRow style="@style/publish_table_row">

                <TextView
                    style="@style/publish_text_style"
                    android:text="@string/book_stand" />

                <View style="@style/vertical_divider_20" />

                <EditText
                    android:id="@+id/edit_min_sell_num"
                    style="@style/publish_edit"
                    android:hint="如10个、10斤、10元等" />
            </TableRow>

            <View style="@style/divider_horizontal" />

            <TableRow style="@style/publish_table_row">

                <TextView
                    style="@style/publish_text_style"
                    android:text="联 系 人" />

                <View style="@style/vertical_divider_20" />

                <EditText
                    android:id="@+id/edit_contact"
                    style="@style/publish_edit" />
            </TableRow>

            <View style="@style/divider_horizontal" />

            <TableRow style="@style/publish_table_row">

                <TextView
                    style="@style/publish_text_style"
                    android:text="电      话" />

                <View style="@style/vertical_divider_20" />

                <EditText
                    android:id="@+id/edit_phone"
                    style="@style/publish_edit"
                    android:inputType="phone" />
            </TableRow>
        </TableLayout>

        <ImageView
            android:id="@+id/picked_image"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:scaleType="fitCenter"
             />

        <Button
            android:id="@+id/btn_publish"
            style="@style/yellow_button"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/btn_publish" />
    </LinearLayout>
</ScrollView>