<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:orientation="vertical">

    <include layout="@layout/common_head_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/center_top_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:src="@drawable/center_head" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="未注册用户"
                android:textColor="@color/text_black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_vipType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:drawablePadding="3dp"
                android:gravity="bottom"
                android:text="游客"
                android:textColor="@color/text_black"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/rb_group"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/rb_visitor"
                style="@style/rb_my_privilege_info"
                android:checked="true"
                android:text="@string/visitor" />

            <RadioButton
                android:id="@+id/rb_exp"
                style="@style/rb_my_privilege_info"
                android:text="@string/vip_experience" />

            <RadioButton
                android:id="@+id/rb_standard"
                style="@style/rb_my_privilege_info"
                android:text="@string/vip_standard" />

            <RadioButton
                android:id="@+id/rb_silver"
                style="@style/rb_my_privilege_info"
                android:text="@string/vip_silver" />

            <RadioButton
                android:id="@+id/rb_gold"
                style="@style/rb_my_privilege_info"
                android:text="@string/vip_gold" />

            <RadioButton
                android:id="@+id/rb_platinum"
                style="@style/rb_my_privilege_info"
                android:text="@string/vip_platinum" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <FrameLayout
                android:id="@+id/info_fragment_content"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

            </FrameLayout>


        </LinearLayout>

    </LinearLayout>
</LinearLayout>