<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:layout_height="wrap_content">

    <EditText

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textSize="@dimen/font_15"
        android:id="@+id/edit_user_name"
        android:hint="@string/user_name"
        android:layout_weight="1" />

    <EditText
        android:layout_width="match_parent"
        android:singleLine="true"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_15"
        android:inputType="textPassword"
        android:id="@+id/edit_password"
        android:ems="10"
        android:hint="@string/password"
        android:layout_weight="1" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            style="@style/font_black_15"
            android:text="@string/forget_password"/>
        <TextView
            android:id="@+id/tv_reg"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            style="@style/font_black_15"
            android:layout_height="wrap_content"
            android:text="@string/reg"/>

     </LinearLayout>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btn_green"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/white"
        style="@style/font_white_15"
        android:text="@string/login_"/>
</LinearLayout>
