<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pop_arro" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="100dp"
        android:orientation="vertical"
        android:background="@color/center_divider"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/category_left_item_supply"
            style="@style/category_tv_style"
            android:text="@string/supply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/category_left_item_buy"
            style="@style/category_tv_style"
            android:text="@string/buy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/category_left_item_interpises"
            style="@style/category_tv_style"
            android:text="@string/interprise"
            android:layout_marginBottom="1px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>


</LinearLayout>
