<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:orientation="vertical"
    android:weightSum="10">

    <include layout="@layout/common_head_layout" />

    <ImageView
        style="@style/logo_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:src="@drawable/logo_large" />

    <LinearLayout
        style="@style/info_content_pad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="0dp">

        <TableLayout
            style="@style/frame_bg_layout"
            android:layout_marginTop="0dp">

            <EditText
                android:id="@+id/edit_user_name"
                style="@style/publish_edit"
                android:layout_height="@dimen/login_input_height"
                android:drawableLeft="@drawable/ic_edit_account"
                android:drawablePadding="@dimen/ic_padding"
                android:hint="@string/phone_num"
                android:inputType="number"
                android:singleLine="true" />

            <View style="@style/divider_horizontal" />


            <EditText
                android:id="@+id/edit_password"
                style="@style/publish_edit"
                android:layout_height="@dimen/login_input_height"
                android:drawableLeft="@drawable/ic_edit_password"
                android:drawablePadding="@dimen/ic_padding"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true" />

        </TableLayout>


        <Button
            android:id="@+id/common_title_done"
            style="@style/blue_button"
            android:layout_height="@dimen/login_widget_height"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="@dimen/login_btn_margin_top"
            android:gravity="center"
            android:text="@string/login_"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_forget_password"
                style="@style/font_black_15"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/find_password" />

            <TextView
                android:id="@+id/tv_reg"
                style="@style/font_black_15"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="@string/reg_for_free" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>